k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: portfolio-gateway
    namespace: portfolio
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
    gatewayClassName: approuting-istio
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          hostname: krahler.com
          allowedRoutes: { namespaces: { from: Same } }
        - name: https
          protocol: HTTPS
          port: 443
          hostname: krahler.com
          tls:
              mode: Terminate
              certificateRefs:
                  - { kind: Secret, name: portfolio-tls }
          allowedRoutes: { namespaces: { from: Same } }
