k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: portfolio
    namespace: portfolio
spec:
    parentRefs:
        - name: portfolio-gateway
          sectionName: https
    hostnames: ["krahler.com"]
    rules:
        - matches:
              - path: { type: PathPrefix, value: / }
          backendRefs:
              - { name: portfolio, port: 80 }
